--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@prisma/adapter-pg": "^7.4.1",
     "@prisma/client": "^7.4.1",
     "cors": "^2.8.6",
     "dotenv": "^17.3.1",
